# hincadodirecto-web

./: .env.example  .gitignore  AGENTS.md  CHECKLIST_MEJORAS.md  CIERRE_TECNICO_FASE_1A.docx  CLAUDE.md  CNAME  Caddyfile  DEV_SETUP.md  EVOLUCION_MODULO_MAQUINARIA_v1.1.docx  EVOLUCION_MODULO_MAQUINARIA_v1.docx  Hincado_Directo_EN.pptx.bak_preslide12  Hincado_Directo_ES.pptx  Hincado_Directo_ES.pptx.bak_prelogoswap  Hincado_Directo_ES.pptx.bak_preslide12  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml  requirements.lock.txt  requirements.txt  robots.txt  servicio_interfaz_facturas.md  setup.bat  sitemap.xml  start_interfaz_facturas.bat  start_interfaz_facturas_hidden.vbs  test_whatsapp.py
.claude/: settings.local.json
config/: config.toml
data/: README_DATOS_FACTURAS.md  proveedores_transporte.csv  proveedores_transporte.xlsx
deploy/: OPERACIONES.md  deploy.sh  hincado-erp.service  nginx.conf  setup_server.sh
docs/: AUDITORIA_ORGANIZACION.md  AUDITORIA_PROYECTO_FACTURAS.md  CHECKLIST_MAESTRO_ERP.md  CONTROL_CALIDAD_TAREAS.md  CRM_ROADMAP.md  CRM_V1_5_DESIGN.md  CRM_V1_5_SPEC_FASE2.md  DIAGNOSTICO_INTERFAZ.md  ELMUNDO_DIRECTO_EMAIL.md  Hincado_Directo_EN.pptx  Hincado_Directo_EN.pptx.bak_prelogoswap  MANTENIMIENTO_AUDIT_PACK.md  PLAN_AISLAR_INTERFAZ_FACTURAS.md  PLAN_MAESTRO_Y_ACCION.md  SISTEMA_DISENO_UX_UI.md
interfaz_facturas/: .dockerignore  .env.example  Dockerfile  RUNBOOK_NOTIFICACIONES.md  backend.py  bot_telegram.py  config.py  diagnostico_ors.py  index.html  login.html  requirements.txt  (+3 more)
(+178 files in other folders)
