[project]
name = "gestion-integral"
version = "1.0.0"
description = "Sistema de gestión integral (ERP/CRM) — facturas, bancos, proveedores, transporte"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "flask-login>=0.6",
    "openai>=1.0",
    "pymupdf>=1.27",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]
